Flora update